--- a/mobile/mcss/mstyle.css
+++ b/mobile/mcss/mstyle.css
@@ -282,7 +282,7 @@ ul.tabbar li.tab_active a { background-color: #5BC872; color: #000; border: 1px 
 /* HISTORY PANEL
 /*#################################################*/
 .page_history { position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; z-index: 1; }
-.page_history table{ width:100%; table-layout:fixed; }
+.page_history table{ width:90%; table-layout:fixed; }
 .page_history .page-title { box-sizing: border-box; margin-bottom: 15px; font-size: 18px; line-height: 50px; padding: 0 50px; height: 50px; display: table; width: 100%; color: #ffffff; background-color: #2b82d4; }
 .page_history  .title-block i { position: absolute; top: 11px; left: 15px; width: 25px; height: 25px;  background: transparent url("../mimg/page.svg") no-repeat 0 center; cursor: pointer; }
 .page_history .ilabel {width:90%; display:block; margin: 5px 10px; height: 29px; font-size: 15px; line-height: 25px; color: #44484D; }
@@ -291,8 +291,11 @@ ul.tabbar li.tab_active a { background-color: #5BC872; color: #000; border: 1px 
 #page_history .input-group{ width:90%; margin-left: 10px;  }
 #page_history .input-group-addon { background: #EEEEEE url("../mimg/calendar.svg") no-repeat center center; cursor: pointer; background-size : 18px 18px; }
 #page_history .input-group input{ font-size: 12px; padding-left: 18x; padding-right: 0px; }
-.page_history_setting{ position: fixed; top: 51px; bottom: 0px; overflow-y:scroll; border: none; }
-
+.page_history_setting{ position: fixed; top: 51px; bottom: 0px; overflow-y:scroll; border: none;background-color:white; }
+.page_history_setting table{
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    margin: 20px 20px;
+}
 /*#################################################*/
 /* CONTROL PANEL
 /*#################################################*/
@@ -322,12 +325,15 @@ ul.tabbar li.tab_active a { background-color: #5BC872; color: #000; border: 1px 
 .page_events .title-block i { position: absolute; top: 11px; left: 15px; width: 25px; height: 25px;  background: transparent url("../mimg/page.svg") no-repeat 0 center; cursor: pointer; }
 #events { position: absolute; left: 15px; right: 15px; top: 55px; bottom: 1px; }
 #event-table-div { position: absolute; top: 5px; bottom: 60px; right: 0px; overflow-y:scroll; }
-#events #event-table td { height: 25px; width: 50%; vertical-align: middle; text-align: left; padding-left: 10px;}
+#events #event-table td { height: 30px; width: 50%; vertical-align: middle; text-align: left; padding-left: 10px;}
 .page_events #event-back { position: absolute; bottom: 18px; right: 0px; }
 .event-table-body{
     background: #EEFFFF;
     border: 1px solid #DDEEEE;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+#events #event-table tbody{
+    padding-top: 10px !important;
 }
 /*#################################################*/
 /* DASHBOARD PANEL
