--- a/mobile/mcss/mstyle.css
+++ b/mobile/mcss/mstyle.css
@@ -325,7 +325,7 @@ ul.tabbar li.tab_active a { background-color: #5BC872; color: #000; border: 1px 
 .page_events .page-title { box-sizing: border-box; margin-bottom: 15px; font-size: 18px; line-height: 50px; padding: 0 50px; height: 50px; display: table; width: 100%; color: #ffffff; background-color: #2b82d4; }
 .page_events .title-block i { position: absolute; top: 11px; left: 15px; width: 25px; height: 25px;  background: transparent url("../mimg/page.svg") no-repeat 0 center; cursor: pointer; }
 #events { position: absolute; left: 15px; right: 15px; top: 55px; bottom: 1px; }
-#event-table-div { position: absolute; top: 5px; bottom: 60px; right: 0px; overflow-y:scroll; }
+#event-table-div { position: absolute; top: 5px; bottom: 60px; right: 0px; overflow-y:scroll;width:100% }
 #events #event-table td { height: 30px; width: 50%; vertical-align: middle; text-align: left; padding-left: 10px;}
 .page_events #event-back { position: absolute; bottom: 18px; right: 0px; }
 .event-table-body{
