--- a/mobile/mcss/mstyle.css
+++ b/mobile/mcss/mstyle.css
@@ -47,7 +47,10 @@ ul { list-style:none; }
 .icon_succ { background: transparent url("../../img/icon_succ.png") no-repeat 16px center; }
 .icon_stop { background: transparent url("../../img/icon_stop.png") no-repeat 16px; }
 .tooltip { position:absolute; padding: 5px; border: 1px solid gray; font-size: 9pt; font-family: Arial, Tahoma; background-color: #fff; z-index: 30; }
-.icon-button { background-color: #2B82D4 !important; width: 95%; border: none; color: white; padding: 1px 5px; text-align: center; text-decoration: none; display: inline-block; font-size: 14px; margin: 5px 2px;  cursor: pointer; border-radius: 4px; box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); height: 35px; -webkit-appearance : none ;}
+.icon-button {
+ background-color: #2B82D4 !important; width: 95%; border: none; color: white; padding: 7px 7px; text-align: center; text-decoration: none; display: inline-block; font-size: 14px; cursor: pointer; border-radius: 4px; box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); height: 35px; -webkit-appearance : none ;
+margin-bottom: 20px;
+}
 .icon-button-back { padding-left: 20px; background: url(../mimg/arrow_left.svg) no-repeat center left; background-size : 15px 15px; vertical-align: top; -webkit-appearance : none; }
 
 /*#################################################*/
@@ -329,9 +332,9 @@ ul.tabbar li.tab_active a { background-color: #5BC872; color: #000; border: 1px 
 #events #event-table td { height: 30px; width: 50%; vertical-align: middle; text-align: left; padding-left: 10px;}
 .page_events #event-back { position: absolute; bottom: 18px; right: 0px; }
 .event-table-body{
-    background: #EEFFFF;
-    border: 1px solid #DDEEEE;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    background: #ccf2ff;
+/*    border: 1px solid #DDEEEE;*/
+/*    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;*/
 }
 #events #event-table tbody{
     padding-top: 10px !important;
